--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Aboubakar | Protfolio</title>
+	<title> Aboubakar | Portfolio</title>
 	<!----------------------- Responsive design ------------------------>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<!---------------------- CSS file ---------------------------------->
