--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,10 @@
 				  </div>
 			</nav>
 		</div>
+		<br><br><br><br>
+		<h1 align="center"> Disponible bientôt</h1>
 		
-		<marquee><h1 align="center"> Disponible bientôt</h1></marquee>
+		<br><br><br>
+		<marquee><h2> Revenez nous vistez dans quelques jours !<h2> </marquee>
 </body>
 </html>
