--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,6 @@
 		<h1 align="center"> Disponible bientôt</h1>
 		
 		<br><br><br>
-		<marquee><h2><i> Revenez nous vistez dans quelques jours !</i><h2> </marquee>
+		<marquee><h2><i> Site web en cours de développement. Revenez nous vister dans quelques jours !</i><h2> </marquee>
 </body>
 </html>
