--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							<div class="expertise-box">
 								<!-- <i class="fab fa-java"></i><span></span> -->
 								<img src="images/java.jpeg">
-								<p>Pour quoi Java?<br> Java est mon language de programmation le plus préféré pour son architeure et frameworks tels que Hiberate et Spring Boot permettant de créer des applications flexibles et multiplateformes.</p>
+								<p>Pour quoi Java?<br> Java est mon language de programmation le plus préféré pour son architeure et frameworks tels que Hiberate et Spring permettant de créer des applications robustes et multiplateformes.</p>
 							</div>
 						</div>	
 					</div>
